# stackcalc-api

./: .env  .gitignore  README.md  main.py  pyproject.toml
docker/: StackCalc.Api.Dockerfile  StackCalc.Worker.Dockerfile  compose-api.yaml  compose-services.yaml  compose.yaml
stackcalc/api/: celery.py  env.py  fastapi.py  redis.py  serializer.py
stackcalc/api/auth/: models.py  routers.py
stackcalc/api/engine/: models.py  routers.py  tasks.py
