# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "stackcalc-api"
version = "0.1.0"
description = "StackCalc API"
readme = "README.MD"
license = "AGPL-3.0-or-later"
authors = [
  {name = "Marcel Tode", email = "marcel@algorithmalley.nl"}
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Framework :: Celery",
    "Private :: Do Not Upload",
]
dependencies = [
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "redis>=6.1.0",
    "uvicorn>=0.34.2",
]

[project.urls]
Homepage = "https://www.stackcalc.com/"
Repository = "https://github.com/stackcalc-project/stackcalc-api"
Issues = "https://github.com/stackcalc-project/stackcalc-api/issues"

[dependency-groups]
dev = [
  "typing_extensions~=4.13",
]
